# prediksi-stok

./: .gitignore  CLAUDE.md  CONTEXT.md  DEMO.md  HANDOFF.md  PRD.md  PRD_id.md  SIMULASI.md  SIMULASI_WA.md  dashboard.py  import_data.py  info.md  main.py  products.json  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_db.py
.wwebjs_cache/: 2.3000.1040433051.html
app/: data.py  parser.py  predictor.py  reconciliation.py  seeder.py  server.py  synthetic_data.py
data/: prediksi.db.bak
data/models/: TestGula.pkl
data/wwebjs_profile/: DevToolsActivePort  Local State  SingletonCookie  SingletonLock  SingletonSocket
data/wwebjs_profile/Default/: Cookies  DIPS-wal  Favicons  History  Preferences  Reporting and NEL  Web Data
docs/adr/: 0001-runtime-split-node-python.md  0002-synthetic-data-bootstrap.md
docs/issues/: 01-project-scaffold-and-sqlite-schema.md  02-synthetic-data-generator.md  03-sales-data-module-and-dashboard-overview.md  04-input-parser-module.md  05-fastapi-webhook.md  06-prediction-engine.md  07-fastapi-prediction-endpoint-and-dashboard-predictions.md  08-whatsapp-bot-receive-messages.md  09-whatsapp-bot-send-messages-and-autoreconnect.md  10-stock-reconciliation-module.md  11-eod-confirmation-flow.md  12-dashboard-product-management.md  13-depletion-alerts-and-eod-reminder.md  14-dashboard-whatsapp-status-and-qr-repair.md  15-daily-backup-and-setup-script.md
tests/: test_data.py  test_parser.py  test_predictor.py  test_reconciliation.py  test_server.py  test_synthetic_data.py
whatsapp-bot/: index.js  package-lock.json  package.json
(+51 files in other folders)
